# gamyeon-AI

./: .env.example  .gitignore  Dockerfile  README.md  callback_receiver.py  docker-compose.yml  main.py  pyproject.toml  request.json  test_event_integration.py  test_question_manual.py  test_webhook_send.py  tests.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml
app/: main.py
app/core/: __init__.py  config.py  consul_helper.py  exceptions.py  llm_factory.py  logging_config.py  prompt_loader.py  schema.py
app/core/events/: __init__.py  bus.py  signals.py
app/core/webhook/: __init__.py  retry_policy.py  webhook_sender.py
app/feedback/: router.py
app/feedback/application/: service.py
app/feedback/domain/: feedback_model.py
app/feedback/infrastructure/: di.py  event_listener.py  langchain_feedback_adapter.py  prompt_provider.py  webhook_callback_adapter.py
app/feedback/schema/: request.py  response.py
app/media/application/: service.py
app/media/domain/: __init__.py
app/media/infrastructure/: claude_haiku_adapter.py  consul_scoring_config.py  di.py  gpt_mini_adapter.py  inmemory_gaze_buffer.py  keyword_extractor_impl.py  media_event_adapter.py  spring_webhook_adapter.py  whisper_stt_adapter.py
app/media/interface/: __init__.py  mapper.py  router.py
app/question/: router.py  schema.py
app/question/application/: service.py
app/question/domain/: interview_input.py
app/question/infrastructure/: di.py  llm_question_gen_adapter.py  (+7 more)
app/report/: exception.py  router.py
scripts/: test_stt_pipeline.py
(+82 files in other folders)
