[project]
name = "gamyeon-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioboto3>=15.5.0",
    "blinker>=1.9.0",
    "fastapi[standard]>=0.133.1",
    "faster-whisper>=1.2.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.1",
    "python-consul>=1.1.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
